objects/redwing__ILT_Class__c.object
<CustomObject>
    <fields>
        <fullName>Email_Notifications_Setting__c</fullName>
        <description>The custom picklist is used to change notification logic for ILT classes/sessions. By default, the notifications are sent for ILT Class Level without ICS attachments</description>
        <inlineHelpText>There is used to change notification logic for ILT classes/sessions</inlineHelpText>
        <label>Email Notifications Setting</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All ILT notifications off</fullName>
                </value>
                <value>
                    <fullName>ICS invites off</fullName>
                </value>
                <value>
                    <fullName>ICS at a Class level</fullName>
                </value>
                <value>
                    <fullName>ICS at a Session level</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ltui__End_Time_Formatted__c</fullName>
        <formula>IF(redwing__End_Time__c != &quot;&quot;, 
IF( VALUE( LEFT( redwing__End_Time__c, 2 ) ) = 12 , &quot;12&quot; + RIGHT( redwing__End_Time__c, 3 ) + &quot; PM&quot;, 
IF( VALUE( LEFT( redwing__End_Time__c, 2 ) ) = 0 , &quot;12&quot; + RIGHT( redwing__End_Time__c, 3 ) + &quot; AM&quot;, 
IF( VALUE( LEFT( redwing__End_Time__c, 2 ) ) &gt; 12, 
IF( VALUE( LEFT( redwing__End_Time__c, 2 ) ) &lt; 22, 
&quot;0&quot; + TEXT( VALUE( LEFT( redwing__End_Time__c, 2 ) ) - 12 ) + RIGHT( redwing__End_Time__c, 3 ) + &quot; PM&quot;, 
TEXT( VALUE( LEFT( redwing__End_Time__c, 2 ) ) - 12 ) + RIGHT( redwing__End_Time__c, 3 ) + &quot; PM&quot; ), 
redwing__End_Time__c+ &quot; AM&quot; ) ) ) , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ltui__Start_Time_Formatted__c</fullName>
        <formula>IF(redwing__Start_Time__c != &quot;&quot;,
IF( VALUE( LEFT( redwing__Start_Time__c, 2 ) ) = 12 , &quot;12&quot; + RIGHT( redwing__Start_Time__c, 3 ) + &quot; PM&quot;, 
IF( VALUE( LEFT( redwing__Start_Time__c, 2 ) ) = 0 , &quot;12&quot; + RIGHT( redwing__Start_Time__c, 3 ) + &quot; AM&quot;, 
IF( VALUE( LEFT( redwing__Start_Time__c, 2 ) ) &gt; 12, 
IF( VALUE( LEFT( redwing__Start_Time__c, 2 ) ) &lt; 22, 
&quot;0&quot; + TEXT( VALUE( LEFT( redwing__Start_Time__c, 2 ) ) - 12 ) + RIGHT( redwing__Start_Time__c, 3 ) + &quot; PM&quot;, 
TEXT( VALUE( LEFT( redwing__Start_Time__c, 2 ) ) - 12 ) + RIGHT( redwing__Start_Time__c, 3 ) + &quot; PM&quot; ), 
redwing__Start_Time__c+ &quot; AM&quot; ) ) ), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Description__c</fullName>
        <description>Overview of the ILT Class and its objective</description>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>redwing__Enable_Waitlist__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, all participants that will be registering for a class after the Max Seats limit is reached will be added to the Waitlist. Email Notification will be send to waitlisted participants. Refer to Appendix A for detailed Waitlist workflow</description>
        <label>Enable Waitlist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__End_Date__c</fullName>
        <description>Date when the ILT Class will end</description>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>redwing__End_Time__c</fullName>
        <label>End Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Enroll_In_Optional_Sessions__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If selected, end users will be automatically enrolled in all optional session of the class. If not, then users will need to be manually enrolled in each session.</inlineHelpText>
        <label>Auto Enroll in Optional ILT Sessions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Learning__c</fullName>
        <label>Learning</label>
        <referenceTo>redwing__Learning__c</referenceTo>
        <relationshipLabel>ILT Classes</relationshipLabel>
        <relationshipName>ILT_Classes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>redwing__Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>redwing__ILT_Location__c</referenceTo>
        <relationshipLabel>ILT Classes</relationshipLabel>
        <relationshipName>ILT_Classes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Max_Seats__c</fullName>
        <description>The maximum number of users that can be enrolled in the ILT Class. All following users will either be added to a Waitlist (if enabled) or will see a message that limit for the ILT Class is reached and they will not be registered.</description>
        <label>Max Seats</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__Max_Waitlist_Seats__c</fullName>
        <description>The maximum number of users that can be added to the waitlist. All following users will see a message that limit is reached and they will not be added to the waitlist queue.</description>
        <label>Max Waitlist Seats</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__Min_Seats__c</fullName>
        <description>The minimum number of users required for the ILT Class to take place</description>
        <label>Min Seats</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__Registration_Cutoff__c</fullName>
        <inlineHelpText>Specify the number of days before the class starts when users should no longer be able to register</inlineHelpText>
        <label>Registration Cutoff</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__Start_Date__c</fullName>
        <description>Date when the ILT Class will start</description>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>redwing__Start_Time__c</fullName>
        <label>Start Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Timezone__c</fullName>
        <description>Timezone in which the ILT Class will be held</description>
        <label>Timezone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pacific/Kiritimati</fullName>
                </value>
                <value>
                    <fullName>Pacific/Enderbury</fullName>
                </value>
                <value>
                    <fullName>Pacific/Tongatapu</fullName>
                </value>
                <value>
                    <fullName>Pacific/Chatham</fullName>
                </value>
                <value>
                    <fullName>Pacific/Auckland</fullName>
                </value>
                <value>
                    <fullName>Pacific/Fiji</fullName>
                </value>
                <value>
                    <fullName>Asia/Kamchatka</fullName>
                </value>
                <value>
                    <fullName>Pacific/Norfolk</fullName>
                </value>
                <value>
                    <fullName>Australia/Lord_Howe</fullName>
                </value>
                <value>
                    <fullName>Pacific/Guadalcanal</fullName>
                </value>
                <value>
                    <fullName>Australia/Adelaide</fullName>
                </value>
                <value>
                    <fullName>Australia/Sydney</fullName>
                </value>
                <value>
                    <fullName>Australia/Brisbane</fullName>
                </value>
                <value>
                    <fullName>Australia/Darwin</fullName>
                </value>
                <value>
                    <fullName>Asia/Seoul</fullName>
                </value>
                <value>
                    <fullName>Asia/Tokyo</fullName>
                </value>
                <value>
                    <fullName>Asia/Hong_Kong</fullName>
                </value>
                <value>
                    <fullName>Asia/Kuala_Lumpur</fullName>
                </value>
                <value>
                    <fullName>Asia/Manila</fullName>
                </value>
                <value>
                    <fullName>Asia/Shanghai</fullName>
                </value>
                <value>
                    <fullName>Asia/Singapore</fullName>
                </value>
                <value>
                    <fullName>Asia/Taipei</fullName>
                </value>
                <value>
                    <fullName>Australia/Perth</fullName>
                </value>
                <value>
                    <fullName>Asia/Bangkok</fullName>
                </value>
                <value>
                    <fullName>Asia/Ho_Chi_Minh</fullName>
                </value>
                <value>
                    <fullName>Asia/Jakarta</fullName>
                </value>
                <value>
                    <fullName>Asia/Rangoon</fullName>
                </value>
                <value>
                    <fullName>Asia/Dhaka</fullName>
                </value>
                <value>
                    <fullName>Asia/Kathmandu</fullName>
                </value>
                <value>
                    <fullName>Asia/Colombo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>redwing__Withdraw_Cutoff__c</fullName>
        <label>Withdraw Cutoff</label>
        <type>Date</type>
    </fields>
    <label>ILT Class</label>
    <listViews>
        <fullName>redwing__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ILT Class Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ILT Classes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>redwing__ILTClass_Start_Date_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>redwing__Start_Date__c &gt; redwing__End_Date__c</errorConditionFormula>
        <errorMessage>Start Date cannot be later than the End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>redwing__ILT_Location_Max_Seats_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>redwing__Location__r.redwing__Max_Seats__c &lt; redwing__Max_Seats__c</errorConditionFormula>
        <errorDisplayField>redwing__Location__c</errorDisplayField>
        <errorMessage>ILT Location does not have enough seats to accomodate this ILT Class. Please select a different Location</errorMessage>
    </validationRules>
</CustomObject>